--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^9.6.8",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "leaflet": "^1.8.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-leaflet": "^4.0.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.2.0",
+    "swiper": "^6.8.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
   },
